# cai-eval-platform

./: .git_sync.py  .gitignore  404.html  IMPLEMENTATION.md  README.md  index.html  mkdocs.yml  pyproject.toml  session-summary.html  sitemap.xml
.github/workflows/: deploy-docs.yml  deploy-eval-platform.yml
backend/: dataset_schema.py  evaluator.py  main.py  phoenix_client.py  ragas_compat.py  tracing.py
backend/metrics/: __init__.py  component_match.py  exact_match.py  execution_accuracy.py  llm_judge.py  ragas_agent.py  token_f1.py
backend/static/: index.html
backend/targets/: agent_studio.py  base.py  llm_endpoint.py
backend/trace/: event_to_ragas.py  workflow_events_to_spans.py
cai_integration/: DEPLOY.md  create_applications.py  create_jobs.py  jobs_config.yaml  launch_app.sh  launch_app_job.py  launch_in_project.py  setup_environment.py  setup_project.py  start_app.py  start_phoenix.py  start_platform.py  trigger_jobs.py
datasets/agent_sample/: metadata.json  validation.json
datasets/spider/: metadata.json
datasets/tau_bench_retail/: metadata.json  validation.json
datasets/tpch/: metadata.json  validation.json
docker/: Dockerfile  entrypoint.sh
docs/: SAMPLE_ANALYTICS_QA_WORKFLOW.md  index.md
runner/: pyproject.toml
runner/cai_eval_runner/: __init__.py  cli.py  client.py
runner/examples/: demo_workflow.py
scripts/: download_spider.py  download_tau_bench.py
search/: search_index.json
tests/: test_agent_studio_session.py  test_custom_metrics.py  test_evaluator_spider.py  test_span_timestamps.py  test_tracing.py
(+25 files in other folders)
